Removed collapse, fixed HR, going to need to force proposal requests on load.

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -62,4 +62,7 @@ that is not associated with ant design components
     line-height: 1.3;
     margin-bottom: 14px;
   }
+  & hr {
+    border: 0.5px solid #e9e9e9;
+  }
 }
